final commit message

--- a/ML Assignment.ipynb
+++ b/ML Assignment.ipynb
@@ -1,6 +1,46 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2d9f4930",
+   "metadata": {},
+   "source": [
+    "## Predicting Heart Disease Risk: A Model Comparison Study"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e6a2420",
+   "metadata": {},
+   "source": [
+    "### Susan Murithi - 158864\n",
+    "### Salima Ali - 169964\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d26bb47",
+   "metadata": {},
+   "source": [
+    "- Goal: Use machine learning models to predict whether a patient has heart disease based on medical features.\n",
+    "\n",
+    "- Task Type: Binary Classification\n",
+    "\n",
+    "- Target Variable: target (1 = Disease, 0 = No Disease)\n",
+    "\n",
+    "- Dataset: UCI Heart Disease Dataset from Kaggle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fbce64d",
+   "metadata": {},
+   "source": [
+    "#### Problem Statement:\n",
+    "We want to build a predictive model that can determine the likelihood of a person having heart disease based on their health attributes. Early prediction can support timely medical intervention, which is crucial in preventing life-threatening complications."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b0bac9d8",
@@ -254,6 +294,312 @@
     "df.head()\n",
     "df.info()\n",
     "df.describe()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38fff8e9",
+   "metadata": {},
+   "source": [
+    "#### 3. Preprocessing\n",
+    "- Label encoding for categorical features (sex, cp, thal, slope, etc.)\n",
+    "\n",
+    "- Feature scaling for k-NN and ANN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "79fbf46a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = df.drop(\"target\", axis=1)\n",
+    "y = df[\"target\"]\n",
+    "\n",
+    "# Scale features\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# 50% train-test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.5, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fca3be41",
+   "metadata": {},
+   "source": [
+    "#### 4. Train & Evaluate Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c0dc613",
+   "metadata": {},
+   "source": [
+    "-  K-Nearest Neighbors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3b167286",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=5)\n",
+    "knn.fit(X_train, y_train)\n",
+    "y_pred_knn = knn.predict(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36ef19dc",
+   "metadata": {},
+   "source": [
+    "-  Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b7ed3edd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "tree = DecisionTreeClassifier(random_state=42)\n",
+    "tree.fit(X_train, y_train)\n",
+    "y_pred_tree = tree.predict(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74e00690",
+   "metadata": {},
+   "source": [
+    "- Artificial Neural Network "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8b8b38fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\salma\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
+    "ann = MLPClassifier(hidden_layer_sizes=(32, 16), max_iter=500, random_state=42)\n",
+    "ann.fit(X_train, y_train)\n",
+    "y_pred_ann = ann.predict(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8099484b",
+   "metadata": {},
+   "source": [
+    "#### 5. Evaluate Accuracy + Confusion Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3a5d12db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KNN Accuracy: 0.84\n",
+      "True Positives: 68, True Negatives: 59, Total Test Cases: 152\n",
+      "TP + TN / Total = 0.84\n",
+      "\n",
+      "Decision Tree Accuracy: 0.74\n",
+      "True Positives: 58, True Negatives: 55, Total Test Cases: 152\n",
+      "TP + TN / Total = 0.74\n",
+      "\n",
+      "ANN Accuracy: 0.80\n",
+      "True Positives: 65, True Negatives: 57, Total Test Cases: 152\n",
+      "TP + TN / Total = 0.80\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix, accuracy_score\n",
+    "\n",
+    "def evaluate(y_true, y_pred, model_name):\n",
+    "    cm = confusion_matrix(y_true, y_pred)\n",
+    "    accuracy = accuracy_score(y_true, y_pred)\n",
+    "    TP = cm[1][1]\n",
+    "    TN = cm[0][0]\n",
+    "    print(f\"{model_name} Accuracy: {accuracy:.2f}\")\n",
+    "    print(f\"True Positives: {TP}, True Negatives: {TN}, Total Test Cases: {len(y_true)}\")\n",
+    "    print(f\"TP + TN / Total = {(TP + TN)/len(y_true):.2f}\\n\")\n",
+    "\n",
+    "evaluate(y_test, y_pred_knn, \"KNN\")\n",
+    "evaluate(y_test, y_pred_tree, \"Decision Tree\")\n",
+    "evaluate(y_test, y_pred_ann, \"ANN\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c28d75b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Accuracy (%)</th>\n",
+       "      <th>True Positives (TP)</th>\n",
+       "      <th>True Negatives (TN)</th>\n",
+       "      <th>Total Test Cases</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KNN</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>68</td>\n",
+       "      <td>59</td>\n",
+       "      <td>152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Decision Tree</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>58</td>\n",
+       "      <td>55</td>\n",
+       "      <td>152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ANN</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>65</td>\n",
+       "      <td>57</td>\n",
+       "      <td>152</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Model  Accuracy (%)  True Positives (TP)  True Negatives (TN)  \\\n",
+       "0            KNN          84.0                   68                   59   \n",
+       "1  Decision Tree          74.0                   58                   55   \n",
+       "2            ANN          80.0                   65                   57   \n",
+       "\n",
+       "   Total Test Cases  \n",
+       "0               152  \n",
+       "1               152  \n",
+       "2               152  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# creating a comparison table\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Replace these with your actual results\n",
+    "results = {\n",
+    "    \"Model\": [\"KNN\", \"Decision Tree\", \"ANN\"],\n",
+    "    \"Accuracy (%)\": [84.0, 74.0, 80.0],\n",
+    "    \"True Positives (TP)\": [68, 58, 65],\n",
+    "    \"True Negatives (TN)\": [59, 55, 57],\n",
+    "    \"Total Test Cases\": [152, 152, 152]\n",
+    "}\n",
+    "\n",
+    "df_results = pd.DataFrame(results)\n",
+    "df_results\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7de06da",
+   "metadata": {},
+   "source": [
+    "#### Analysis and Interpretation\n",
+    "- KNN achieved the highest accuracy at 84%, correctly identifying the most true positives and true negatives overall. Its strength here likely came from the numerical nature of the features and the scaled dataset, which benefits distance-based models like KNN.\n",
+    "\n",
+    "- ANN (Artificial Neural Network) followed closely with an 80% accuracy. It struck a balance, performing well on both positive and negative predictions. Its slightly lower accuracy compared to KNN might be due to limited model tuning (e.g., hidden layers, epochs), but it still generalized effectively.\n",
+    "\n",
+    "- Decision Tree lagged behind with 74% accuracy. While still respectable, it may have been more prone to overfitting, or perhaps it didn’t capture the deeper, nonlinear relationships in the data as well as the other two models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a09ff21",
+   "metadata": {},
+   "source": [
+    "#### Conclusion\n",
+    "- Ranking (based on accuracy): KNN > ANN > Decision Tree\n",
+    "\n",
+    "- KNN is the best performing model for this dataset, suggesting that proximity-based classification worked well.\n",
+    "\n",
+    "- ANN is a close second and might outperform with further tuning.\n",
+    "\n",
+    "- Decision Trees, while interpretable, underperformed slightly and may require pruning or boosting for better results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af582496",
+   "metadata": {},
+   "source": [
+    "#### Real-Life Applicability                                                                                                                                       \n",
+    "- Doctors and Nurses: The model can help them quickly check if someone might have heart problems during regular hospital visits.\n",
+    "\n",
+    "- Health Apps: It can be used in mobile apps to help people in remote or rural areas check their heart health without needing to visit a doctor.\n",
+    "\n",
+    "- Healthy Living Advice: If the model says someone is at risk, they can get advice on how to eat better, exercise, or reduce stress to stay healthy.\n",
+    "\n",
+    "- Insurance Companies: It can help insurance companies understand a person’s health risk before giving them a health cover or deciding the price of a plan."
    ]
   }
  ],
