--- a/ML Assignment.ipynb
+++ b/ML Assignment.ipynb
@@ -33,6 +33,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "94058838",
+   "metadata": {},
+   "source": [
+    "| Feature      | Description                                                                  | Type                 |\n",
+    "| ------------ | ---------------------------------------------------------------------------- | -------------------- |\n",
+    "| **age**      | Age of the patient in years                                                  | Numerical            |\n",
+    "| **sex**      | Gender (1 = male, 0 = female)                                                | Categorical (Binary) |\n",
+    "| **cp**       | Chest pain type (0 = typical angina to 3 = asymptomatic)                     | Categorical          |\n",
+    "| **trestbps** | Resting blood pressure in mm Hg                                              | Numerical            |\n",
+    "| **chol**     | Serum cholesterol level in mg/dl                                             | Numerical            |\n",
+    "| **fbs**      | Fasting blood sugar > 120 mg/dl (1 = true, 0 = false)                        | Categorical (Binary) |\n",
+    "| **restecg**  | Resting electrocardiographic results (0–2)                                   | Categorical          |\n",
+    "| **thalach**  | Maximum heart rate achieved                                                  | Numerical            |\n",
+    "| **exang**    | Exercise-induced angina (1 = yes, 0 = no)                                    | Categorical (Binary) |\n",
+    "| **oldpeak**  | ST depression induced by exercise                                            | Numerical            |\n",
+    "| **slope**    | Slope of peak exercise ST segment (0 = upsloping, 1 = flat, 2 = downsloping) | Categorical          |\n",
+    "| **ca**       | Number of major vessels colored by fluoroscopy (0–3)                         | Numerical            |\n",
+    "| **thal**     | Thalassemia (1 = normal, 2 = fixed defect, 3 = reversible defect)            | Categorical          |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9fbce64d",
    "metadata": {},
    "source": [
@@ -41,8 +63,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9ef10a63",
+   "metadata": {},
+   "source": [
+    "#### Exploring the dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "b0bac9d8",
    "metadata": {},
    "outputs": [
@@ -283,7 +313,7 @@
        "max      3.000000    1.000000  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "79fbf46a",
    "metadata": {},
    "outputs": [],
@@ -346,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "3b167286",
    "metadata": {},
    "outputs": [],
@@ -369,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "b7ed3edd",
    "metadata": {},
    "outputs": [],
@@ -391,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "8b8b38fa",
    "metadata": {},
    "outputs": [
@@ -399,7 +429,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\salma\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
+      "c:\\Users\\salma\\anaconda3\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -417,12 +447,12 @@
    "id": "8099484b",
    "metadata": {},
    "source": [
-    "#### 5. Evaluate Accuracy + Confusion Matrix"
+    "#### 5. Evaluate Accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "3a5d12db",
    "metadata": {},
    "outputs": [
@@ -464,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "c28d75b3",
    "metadata": {},
    "outputs": [
@@ -537,7 +567,7 @@
        "2               152  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,11 +595,11 @@
    "metadata": {},
    "source": [
     "#### Analysis and Interpretation\n",
-    "- KNN achieved the highest accuracy at 84%, correctly identifying the most true positives and true negatives overall. Its strength here likely came from the numerical nature of the features and the scaled dataset, which benefits distance-based models like KNN.\n",
+    "- KNN (84% accuracy): Performed best, likely due to scaled numerical features favoring distance-based models.\n",
     "\n",
-    "- ANN (Artificial Neural Network) followed closely with an 80% accuracy. It struck a balance, performing well on both positive and negative predictions. Its slightly lower accuracy compared to KNN might be due to limited model tuning (e.g., hidden layers, epochs), but it still generalized effectively.\n",
+    "- ANN (80% accuracy): Balanced performance, with potential for improvement via tuning.\n",
     "\n",
-    "- Decision Tree lagged behind with 74% accuracy. While still respectable, it may have been more prone to overfitting, or perhaps it didn’t capture the deeper, nonlinear relationships in the data as well as the other two models."
+    "- Decision Tree (74% accuracy): Weaker results, possibly due to overfitting or limited nonlinear pattern capture."
    ]
   },
   {
@@ -601,11 +631,22 @@
     "\n",
     "- Insurance Companies: It can help insurance companies understand a person’s health risk before giving them a health cover or deciding the price of a plan."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1733a15",
+   "metadata": {},
+   "source": [
+    "#### Improvements\n",
+    "- Model Tuning\n",
+    "- Additional Evaluation Metrics\n",
+    "- Feature Importance"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -619,7 +660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
